--- a/.env.example
+++ b/.env.example
@@ -13,7 +13,7 @@
 # You can generate a new secret on the command line with:
 # npx auth secret
 # https://next-auth.js.org/configuration/options#secret
-AUTH_SECRET=""
+AUTH_SECRET="uXCCh4fTeBUVngjw/5iQwfTu+X850Xn8H6CpFRVCdCQ="
 
 # Next Auth Discord Provider
 AUTH_DISCORD_ID=""
@@ -24,3 +24,6 @@ DATABASE_URL="postgresql://postgres:password@localhost:5432/ai-app-template"
 
 # Redis
 REDIS_URL="redis://default:redis-pw@localhost:6379"
+
+# Google AI
+GOOGLE_GENERATIVE_AI_API_KEY="AIzaSyBySnEBe7ettioBddIa-Zm72Aw6KXp4nTI"
